<?xml version="1.0"?>
<package format="2">
    <name>iai_robot_peripherals</name>
    <version>0.0.0</version>
    <description>The iai_robot_peripherals package</description>

    <maintainer email="jeroen.schaefer@outlook.de">Jeroen Schäfer</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
        <metapackage/>
        <build_type>ament_cmake</build_type>
    </export>
</package>
